# rust-app-price-watch

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: fetch_app_details_test.rs
