[package]
name = "rust-app-price-watch"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
regex = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }