[package]
name = "rust-app-price-watch"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
regex = "1"
teloxide = { version = "0.5", features = ["full"] }
pretty_env_logger = "0.4"
log = "0.4"
dotenv = "0.15"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }