[package]
name = "rust-app-price-watch"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
regex = "1"
teloxide = { version = "0.16.0", features = ["full"] }
pretty_env_logger = "0.4"
log = "0.4"
dotenv = "0.15"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
